# linyaps

./: .clang-format  .cmake-format.py  .deepsource.toml  .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  .sourcery.yaml  BUILD.md  BUILD.zh_CN.md  CMakeLists.txt  CMakePresets.json  DEVELOPER_GUIDE.md  Dockerfile  INSTALL.md  OWNERS  README.md  README.zh_CN.md  REUSE.toml  code_coverage.sh  configure.h.in  doxygen.sh  doxygen_pdf.sh  linglong.yaml  release.bash  开发者指南.md
apps/: CMakeLists.txt
apps/dumb-init/: CMakeLists.txt
apps/dumb-init/src/: VERSION.h  dumb-init.c
apps/generators/00-id-mapping/: CMakeLists.txt
apps/generators/05-initialize/: CMakeLists.txt
apps/generators/20-devices/: CMakeLists.txt
apps/generators/25-host-env/: CMakeLists.txt
apps/generators/25-user-home/: CMakeLists.txt
apps/generators/30-host-ipc/: CMakeLists.txt
apps/generators/30-user-home/: CMakeLists.txt
apps/generators/40-host-ipc/: CMakeLists.txt
apps/generators/40-xdg-runtime-dir/: CMakeLists.txt
apps/generators/90-legacy/: CMakeLists.txt
apps/ll-box/: .clang-tidy  CMakeLists.txt  README.md
apps/ll-box/src/: README.md  loader.cpp  main.cpp
apps/ll-builder/: CMakeLists.txt
apps/ll-builder-utils/: CMakeLists.txt  ll-builder-export
apps/ll-builder-utils/patch/: libfuse.patch
apps/ll-builder/src/: CMakeLists.txt  command_options.h  main.cpp
apps/ll-cli/: CMakeLists.txt
apps/ll-cli/src/: CMakeLists.txt  main.cpp  transform_old_exec.cpp  transform_old_exec.h
apps/ll-dialog/: CMakeLists.txt
apps/ll-dialog/src/: cache_dialog.cpp  cache_dialog.h  cache_dialog_resource.qrc  main.cpp  permission.cpp  permission.h  permissionDialog.cpp  permissionDialog.h
apps/ll-driver-detect/: CMakeLists.txt  README.md
apps/ll-driver-detect/src/: application_singleton.cpp  application_singleton.h  dbus_notifier.cpp  dbus_notifier.h  driver_detection_config.cpp  driver_detection_config.h  driver_detection_manager.cpp  driver_detection_manager.h  driver_detector.h  main.cpp  nvidia_driver_detector.cpp  nvidia_driver_detector.h
apps/ll-init/: CMakeLists.txt
apps/ll-init/src/: ll-init.cpp
apps/ll-package-manager/: CMakeLists.txt
apps/ll-package-manager/src/: CMakeLists.txt  main.cpp
apps/ll-service/: CMakeLists.txt
apps/ll-service/src/: CMakeLists.txt  main.cpp
apps/ll-session-helper/: CMakeLists.txt
apps/ll-session-helper/src/: main.cpp
apps/ll-store-installer/: CMakeLists.txt
apps/ll-store-installer/src/: installer-dialog.cpp  installer-dialog.h  main.cpp
apps/ll-system-helper/: CMakeLists.txt
apps/ll-system-helper/src/: CMakeLists.txt  ll-system-helper.main.cpp  main.cpp
apps/llpkg/: CMakeLists.txt  llpkg
apps/prototype/: CMakeLists.txt  README.md
apps/prototype/virtual-base/: CMakeLists.txt
apps/uab/: CMakeLists.txt  README.md
apps/uab-header/: CMakeLists.txt
apps/uab-header/src/: main.cpp
apps/uab/header/: CMakeLists.txt
apps/uab/loader/: CMakeLists.txt
libs/linglong/: CMakeLists.txt
libs/ocppi/: .clang-format  .cmake-format.py  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md
libs/ocppi/tools/: codegen.sh  iwyu.sh
misc/: CMakeLists.txt  builder.yaml
misc/bash_completion/: ll-builder  ll-cli
misc/builder-template/: qmake.yaml
misc/dbus/: org.deepin.linglong.AppManager.service.in  org.deepin.linglong.PackageManager.conf  org.deepin.linglong.PackageManager.conf.in  org.deepin.linglong.PackageManager.service  org.deepin.linglong.PackageManager.service.in  org.deepin.linglong.SystemHelper.conf  org.deepin.linglong.SystemHelper.conf.in  org.deepin.linglong.SystemHelper.service  org.deepin.linglong.SystemHelper.service.in
misc/lib/linglong/: generate-xdg-data-dirs.sh
misc/lib/sysusers.d/: linglong.conf
misc/lib/tmpfiles.d/: linglong.conf
misc/libexec/linglong/: app-conf-generator  fetch-archive-source  fetch-dsc-repo  fetch-dsc-source  upgrade-all  (+5 more)
misc/linglong/: config.json  config.yaml
misc/script/: linglong-repair-tool  linglong.sh
misc/scripts/: app-conf-generator.sh  create-linglong-dirs  create-linglong-dirs.in  fetch-dsc-repo  fetch-git-repo  upgrade-all.in
misc/sysuser/: linglong.conf  linglong.conf.in
po/: CMakeLists.txt  LINGUAS  POTFILES.in  ca.po  en_GB.po  en_US.po  es.po  fi.po  fr.po  gl_ES.po  it.po  linyaps.pot  pl.po  pt_BR.po  ro.po  ru.po  sq.po  uk.po  zh_CN.po  zh_HK.po  zh_TW.po
src/: CMakeLists.txt  configure.h.in  ll-cli.main.cpp  ll-package-manager.main.cpp  ll-service.main.cpp  ll-system-helper.main.cpp
src/api/: CMakeLists.txt
src/box/: CMakeLists.txt  README.md  main.cpp
src/builder/: CMakeLists.txt  builder_templates.qrc  depend_fetcher.cpp  main.cpp  resource.qrc  source_fetcher.cpp
src/cli/: CMakeLists.txt  main.cpp  namespace_enter.cpp
src/dbusgen/: CMakeLists.txt
src/installer/: CMakeLists.txt  installer-dialog.cpp  installer-dialog.h  main.cpp  space.linglong.Installer.desktop
src/linglong/: CMakeLists.txt
src/module/: CMakeLists.txt
src/package_manager/: CMakeLists.txt  main.cpp  package_manager.cpp  package_manager_p.h  resource.qrc
src/service/: CMakeLists.txt  main.cpp
src/system/: CMakeLists.txt  main.cpp
src/system_helper/: CMakeLists.txt  filesystem_helper.cpp  main.cpp  package_manager_helper.cpp  package_manager_helper.h  system_helper.cpp  system_helper.h
test/: CMakeLists.txt  HttpClient_test.cpp  RepoHelper_test.cpp  app_status_test.cpp  build_ouap_test.cpp  extract_test.cpp  get_info_test.cpp  httpclient_test.cpp  manager_test.cpp  oci-test.cpp  oci_test.cpp  package_manager_test.cpp  package_test.cpp  qdbus_call_test.cpp  qdbus_retmsg_test.cpp  qt_json.cpp  qt_json_permission.cpp  qt_yaml.cpp  qt_yaml.h  repohelper_test.cpp  singleton_test.cpp  uap_manager_test.cpp  uossv_test.cpp  util_fs_test.cpp
test/setns/: CMakeLists.txt  container_bash.cpp  container_bash_cli.cpp  setns.cpp
tests/: CMakeLists.txt
tests/http-client-tests/: CMakeLists.txt
tests/ll-tests/: CMakeLists.txt
tests/src/: main.cpp
tools/qdbusxml2cpp/: CMakeLists.txt  README  README.md  qdbusxml2cpp.cpp  qdbusxml2cpp_5.cpp  qdbusxml2cpp_6.cpp
(+1876 files in other folders)
