# SPDX-FileCopyrightText: 2023 UnionTech Software Technology Co., Ltd.
#
# SPDX-License-Identifier: LGPL-3.0-or-later

add_subdirectory(ll-builder)
add_subdirectory(ll-cli)
add_subdirectory(ll-package-manager)
add_subdirectory(ll-service)
add_subdirectory(ll-system-helper)
add_subdirectory(llpkg)
add_subdirectory(prototype)
